style.css
html {
    width:100%;
    height:100%;
    min-width: 580px;
}

body {
    width:100%;
    height:100%;
    font:normal 18px/30px 'Helvetica Neue';
    background-color: white;
}

.bg {
    color: #FFF;
    height: 100%;
    width:100%;
    background-image:url('addresses.jpg');
    background-size: cover;
    min-height: 400px;
}

.logo {
    float: left;
    margin: 30px;
    font-family: "Titillium Web",sans-serif;
    font-size: 30px;
}

.nav {
    float: right;
    margin: 30px;
}

.nav > a:link, .nav > a:visited {
    font-family: "Titillium Web",sans-serif;
    text-transform: uppercase;
    text-decoration: none;
    padding: 10px;
    font-size: 14px;
    border-style:solid;
    border-width:1px;
    border-color: #B8B8B8;
    border-radius: 5px;
    text-align: center;
    color: #FFF;
}
.nav > a:hover {
    background-color: #2E343A;
}

.tagline {
    min-width: 350px;
    background-color: rgba(46, 52, 58, 0.3);
    padding: 20px;
    border-radius: 20px;
    text-align: center;
    position: absolute;
    top: 40%;
    right: 10%;
    left: 10%;
    font-size: 50px;
    line-height: 55px;
    font-family: 'Raleway', sans-serif;
    color: #E4E4E4;
}

.down {
    left:0;
    right:0;
    margin-left:auto;
    margin-right:auto;
    bottom: 0px;
    position: absolute;
    margin-left: auto ;
    margin-right: auto ;
    height: 25px;
    width: 40px;
    background-color: #2E343A;
    border-radius: 7px 7px 0px 0px;
    text-align: center;
}

.divider {
    font-family: "Titillium Web",sans-serif;
    height: 60px;
    width: 100%;
    line-height: 60px;
    background-color: #2E343A;
    text-align: center;
    color: #FFF;
}

.col {
    font-size: 1.5vmax;;
    width: 25%;
    height: 300px;
    float: left;
    margin: 40px;
    background-color: white;
    text-align: center;
    position: relative;
}

.button > a:link, .button > a:visited {
        font-family: "Titillium Web",sans-serif;
        text-transform: uppercase;
        text-decoration: none;
        padding: 10px;
        font-size: 14px;
        border-style:solid;
        border-width:1px;
        border-color: #B8B8B8;
        border-radius: 5px;
        text-align: center;
        color: black;
        position: absolute;
        bottom: -30px;
        left: 0px;
        right: 0px;
        margin-left: auto;
        margin-right: auto;
}

.button > a:hover {
    background-color: #2E343A;
    color: white;
}

.col-pane {
    background-color: white;
    width: 90%;
    left: 0px;
    right: 0px;
    margin-left: auto;
    margin-right: auto;
}

.leftimg {
    margin-left:auto;
    margin-right:auto;
    background: url('download.svg');
    background-size: 100% 100%;
    background-repeat: no-repeat;
    height: 100px;
    width: 100px;
    margin-bottom: 10px;
}

.midimg {
    margin-left:auto;
    margin-right:auto;
    background: url('add.svg');
    background-size: 100px 100px;
    background-repeat: no-repeat;
    height: 100px;
    width: 100px;
    margin-bottom: 10px;
}

.rightimg {
    margin-left:auto;
    margin-right:auto;
    background: url('code.svg');
    background-size: 100px 100px;
    background-repeat: no-repeat;
    height: 100px;
    width: 100px;
    margin-bottom: 10px;
}

